
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 size_t BUFSIZE ;
 char* INFO1 ;
 char* INFO2 ;
 int O_CREAT ;
 int O_RDWR ;
 int O_TRUNC ;
 int SI_SYSNAME ;
 size_t atoi (char*) ;
 int close (int) ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int free (char*) ;
 scalar_t__ malloc (size_t) ;
 int memset (char*,int ,size_t) ;
 int open (char*,int,int) ;
 int perror (char*) ;
 int stderr ;
 int sysinfo (int ,char*,int ) ;
 size_t write (int,char*,size_t) ;

int main(int argc, char **argv)
{
 int fd;
 size_t out, bufsize = BUFSIZE;
 char *buf;


 fprintf(stderr, "%s\n%s\n\n", INFO1, INFO2);


 if (argc < 2) {
  fprintf(stderr, "usage: %s outfile [outsize]\n\n", argv[0]);
  exit(1);
 }
 if (argc > 2)
  if ((bufsize = atoi(argv[2])) == 0) {
   fprintf(stderr, "Error (atoi): invalid outsize\n");
   exit(1);
  }


 fprintf(stderr, "Using outfile\t: %s\n", argv[1]);
 fprintf(stderr, "Using outsize\t: %u\n\n", bufsize);


 if ((buf = (char *)malloc(bufsize)) == ((void*)0)) {
  perror("Error (malloc)");
  fprintf(stderr, "Hint: Try again with a smaller output size\n");
  exit(1);
 }
 memset(buf, 0, bufsize);


 sysinfo(SI_SYSNAME, buf, 0);


 if ((fd = open(argv[1], O_RDWR | O_CREAT | O_TRUNC, 0700)) < 0) {
  perror("Error (open)");
  free(buf);
  exit(1);
 }
 out = write(fd, buf, bufsize);
 fprintf(stderr, "Pitagora Suicchi! %u bytes written to %s\n", out, argv[1]);
 fprintf(stderr, "Hint: Try also with a bigger output size\n");

 close(fd);
 free(buf);

 exit(0);
}
